--- a/infrastructure/AuthZ-RBAC-Patterns/iac/opa/k8s/02-services.yaml
+++ b/infrastructure/AuthZ-RBAC-Patterns/iac/opa/k8s/02-services.yaml
@@ -27,7 +27,7 @@ metadata:
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: external
     service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
-    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: environment=dev,business_unit=banbif,cost_center_id=900700,cost_center_name=raul_diaz,cost_center_tech=miguel_casique,project=Patrones-Desarrollo-e-Integracion,managed_by=TI-EA2022-12498
+    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: project=Patrones-Desarrollo-e-Integracion
 spec:
   ports:
     - port: 8181
